use System.arraycopy( instead of copy them one by one.